--- a/index.html
+++ b/index.html
@@ -17,37 +17,37 @@
 
     <meta name="keywords" content="">
 
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100' rel='stylesheet' type='text/css'>
-
-    <!-- styles -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/owl.theme.css" rel="stylesheet">
 
-    <!-- theme stylesheet -->
+
+
     <link href="css/style.default.css" rel="stylesheet" id="theme-stylesheet">
-
-    <!-- your stylesheet with modifications -->
     <link href="css/custom.css" rel="stylesheet">
-
     <script src="js/respond.min.js"></script>
-
     <link rel="shortcut icon" href="favicon.png">
-
-    <!-- Stylesheet for calender -->
-    <script src="calendar-master/zabuto_calendar.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="calendar-master/zabuto_calendar.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript"></script>
 
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://zabuto.com/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <script src="js/zabuto_calendar.min.js"></script>
+    <!-- <script src="js/zabuto_calendar.js"></script> -->
+
+    <link rel="stylesheet" type="text/css" href="css/zabuto_calendar.css">
+    <link rel="stylesheet" type="text/css" href="css/zabuto_calendar.min.css">
 
 </head>
-
 <body>
 
-    <!-- *** TOPBAR ***
- _________________________________________________________ -->
     <div id="top">
         <div class="container">
             <div class="col-md-6 offer" data-animate="fadeInDown">
@@ -63,8 +63,6 @@
                     </li>
                     <li><a href="register.html">Register</a>
                     </li>
-
-
                 </ul>
             </div>
         </div>
@@ -104,10 +102,6 @@
 
     </div>
 
-    <!-- *** TOP BAR END *** -->
-
-    <!-- *** NAVBAR ***
- _________________________________________________________ -->
 
     <div class="navbar navbar-default yamm" role="navigation" id="navbar">
         <div class="container">
@@ -433,16 +427,10 @@
         </div>
         <!-- /.container -->
     </div>
-    <!-- /#navbar -->
-
-    <!-- *** NAVBAR END *** -->
-
 
 
     <div id="all">
-
         <div id="content">
-
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
@@ -460,24 +448,31 @@
                                 <img class="img-responsive" src="img/main-slider7.jpg" alt="">
                             </div>
                         </div>
-                        <!-- /#main-slider -->
                     </div>
 
-                    <div class="col-md-12">
-                        <h3><a href="#">Best prices</a></h3>
-                          <div id="my-calendar"></div>
-                            <script type="application/javascript">
+                    <div class="col-md-4">
+
+
+                      <div id="my-calendar"></div>
+
+                      <script type="application/javascript">
                             $(document).ready(function () {
-                            $("#my-calendar").zabuto_calendar({language: "id"});
+                                $("#my-calendar").zabuto_calendar({
+                                    ajax: {
+                                        url: "show_data.php",
+                                        modal: true
+                                    }
+                                });
                             });
-                            </script>
+                        </script>
+
+
                     </div>
                 </div>
               </div>
             <!-- *** ADVANTAGES HOMEPAGE ***
  _________________________________________________________ -->
             <div id="advantages">
-
                 <div class="container">
                     <div class="same-height-row">
                         <div class="col-sm-4">
@@ -1071,7 +1066,7 @@
 
     <!-- *** SCRIPTS TO INCLUDE ***
  _________________________________________________________ -->
-    <script src="js/jquery-1.11.0.min.js"></script>
+    <!-- <script src="js/jquery-1.11.2.min.js"></script> -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <script src="js/waypoints.min.js"></script>
@@ -1079,7 +1074,6 @@
     <script src="js/bootstrap-hover-dropdown.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/front.js"></script>
-
 
 </body>
 
